--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-
+streamlit==1.27.2
+openai==0.28.1
+requests @ file:///C:/b/abs_316c2inijk/croot/requests_1690400295842/work
+torch==2.1.0
+bs4==0.0.1
+sentence-transformers==2.2.2
